[package]
name = "nvr"
license = "MIT"
version = "0.1.3"
edition = "2024"
rust-version = "1.93"
categories = ["template-engine", "parsing"]
description = "Nested variable resolution for mustache-style template strings."
keywords = ["template", "mustache", "variable", "resolution", "nested"]
readme = "README.md"
repository = "https://github.com/canmi21/nvr.git"

[package.metadata.docs.rs]
all-features = true

[dependencies]
mst-parser = { version = "0.1", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
varchain = { version = "0.1", default-features = false }

[features]
default = ["std"]
std = ["thiserror/std", "mst-parser/std", "varchain/std"]
tracing = ["dep:tracing", "mst-parser/tracing"]
full = ["std", "tracing"]

[[example]]
name = "simple"
required-features = ["std"]

[[example]]
name = "nested"
required-features = ["std"]

[[example]]
name = "not_found"
required-features = ["std"]

[[example]]
name = "limits"
required-features = ["std"]

[dev-dependencies]
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
await_holding_lock = "warn"
dbg_macro = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
verbose_file_reads = "warn"